--- a/config/database.yml
+++ b/config/database.yml
@@ -13,20 +13,13 @@ default: &default
   adapter: mysql2
   encoding: utf8mb4
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
   host: localhost
-
-development:
-  <<: *default
-  database: playground_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: playground_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -48,8 +41,26 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+development:
+  <<: *default
+  database: playground_dev
+  variables:
+    sql_mode: TRADITIONAL
+
+test:
+  <<: *default
+  database: playground_test
+  variables:
+    sql_mode: TRADITIONAL
+
+demo:
+  <<: *default
+  database: playground_demo
+
+testing:
+  <<: *default
+  database: playground_testing
+
 production:
   <<: *default
   database: playground_production
-  username: playground
-  password: <%= ENV["PLAYGROUND_DATABASE_PASSWORD"] %>
